k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orchestration
  labels:
    name: orchestration
    app: orchestration-service
